--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-easy-crop": "^5.5.3",
